优化反射创建构造函数的写法